--- a/src/index.css
+++ b/src/index.css
@@ -100,3 +100,34 @@ textarea.materialize-textarea:focus:not([readonly]) {
 .remove-outline {
   outline: none;
 }
+
+.title {
+  text-align: center;
+  font-family: arial, sans-serif;
+}
+
+.transactions {
+  text-align: center;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  border: 3px solid #ddd;
+  width: 100%;
+}
+
+.transactions td, .transactions th{
+  text-align: center;
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+.transactions tr:nth-child(even){background-color: #f2f2f2;}
+
+.transactions tr:hover {background-color: #ddd;}
+
+.transactions th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #4CAF50;
+  color: white;
+}
